force-app/main/default/objects/Attendance__c/fields/Check_Time__c.field-meta.xml
<CustomField>
    <fullName>Check_Time__c</fullName>
    <formula>IF( TIMEVALUE( In_Time__c) &gt;  TIMEVALUE(&quot;04:00:00.000&quot;)  , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Time</label>
    <type>Checkbox</type>
</CustomField>