force-app/main/default/objects/Attendance__c/fields/In_Time__c.field-meta.xml
<CustomField>
    <fullName>In_Time__c</fullName>
    <description>Employee In Time.</description>
    <label>In Time</label>
    <type>DateTime</type>
</CustomField>