force-app/main/default/objects/Attendance__c/fields/Total_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Time__c</fullName>
    <description>Employee Working Hours.</description>
    <formula>IF(
  Out_Time__c - In_Time__c &gt; 0 ,
   TEXT( FLOOR( MOD( (Out_Time__c - In_Time__c ) * 24, 24 ) ) ) &amp; &quot; hours &quot;
  &amp; TEXT( ROUND( MOD( (Out_Time__c - In_Time__c ) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot;,
  &quot;Absent&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Time</label>
    <type>Text</type>
</CustomField>